--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "ielts-mate",
   "version": "0.1.0",
   "private": true,
+  "overrides": {
+    "embla-carousel-react": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -104,6 +110,5 @@
       "biome check --files-ignore-unknown=true",
       "biome check --write --no-errors-on-unmatched"
     ]
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
