--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.0.4",
     "dayjs": "^1.11.13",
+    "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "ldrs": "^1.1.5",
     "lucide-react": "^0.479.0",
