fix: auth layout

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
