--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^9.5.0",
     "@hookform/resolvers": "^4.1.3",
     "@next/third-parties": "^15.2.2",
     "@radix-ui/react-accordion": "^1.2.3",
