--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "cypress": "cypress open"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-react": "^9.5.0",
-    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^4.1.3",
     "@next/third-parties": "^15.2.2",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -52,6 +50,23 @@
     "@tanstack/query-core": "^5.67.3",
     "@tanstack/react-query": "^5.67.3",
     "@tanstack/react-query-devtools": "^5.67.3",
+    "@tiptap/core": "^2.13.0",
+    "@tiptap/extension-blockquote": "^2.13.0",
+    "@tiptap/extension-bold": "^2.13.0",
+    "@tiptap/extension-bullet-list": "^2.13.0",
+    "@tiptap/extension-code": "^2.13.0",
+    "@tiptap/extension-heading": "^2.13.0",
+    "@tiptap/extension-history": "^2.13.0",
+    "@tiptap/extension-image": "^2.13.0",
+    "@tiptap/extension-italic": "^2.13.0",
+    "@tiptap/extension-link": "^2.13.0",
+    "@tiptap/extension-list-item": "^2.13.0",
+    "@tiptap/extension-ordered-list": "^2.13.0",
+    "@tiptap/extension-paragraph": "^2.13.0",
+    "@tiptap/extension-underline": "^2.13.0",
+    "@tiptap/pm": "^2.13.0",
+    "@tiptap/react": "^2.13.0",
+    "@tiptap/starter-kit": "^2.13.0",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.0.4",
