--- a/biome.json
+++ b/biome.json
@@ -81,7 +81,7 @@
         "noUnsafeOptionalChaining": "error",
         "noUnusedLabels": "error",
         "noUnusedPrivateClassMembers": "error",
-        "noUnusedVariables": "off",
+        "noUnusedVariables": "error",
         "useArrayLiterals": "off",
         "useHookAtTopLevel": "error",
         "useIsNan": "error",
