feat: table extention for tiptap

--- a/package.json
+++ b/package.json
@@ -63,6 +63,10 @@
     "@tiptap/extension-list-item": "^2.13.0",
     "@tiptap/extension-ordered-list": "^2.13.0",
     "@tiptap/extension-paragraph": "^2.13.0",
+    "@tiptap/extension-table": "^2.22.3",
+    "@tiptap/extension-table-cell": "^2.22.3",
+    "@tiptap/extension-table-header": "^2.22.3",
+    "@tiptap/extension-table-row": "^2.22.3",
     "@tiptap/extension-underline": "^2.13.0",
     "@tiptap/pm": "^2.13.0",
     "@tiptap/react": "^2.13.0",
