--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "check": "biome check",
+    "type": "tsc --noEmit",
     "format": "biome format --write",
     "fix": "biome check --write",
     "fix:lint": "biome lint --write",
