feat: types and hooks for listening module and remove unused components

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:staging": "dotenv -e .env.staging -- next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -111,6 +112,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "cypress": "^14.2.0",
+    "dotenv-cli": "^9.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "eslint-plugin-react-hooks": "^5.2.0",
