--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.0.4",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
