--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-dom": "^19.0.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
