--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.6.1",
+    "@stomp/stompjs": "^7.1.1",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/query-core": "^5.67.3",
     "@tanstack/react-query": "^5.67.3",
@@ -98,6 +99,7 @@
     "recharts": "^2.15.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "sockjs-client": "^1.6.1",
     "sonner": "^2.0.1",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.0.2",
@@ -117,6 +119,7 @@
     "@types/qs": "^6.14.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sockjs-client": "^1.5.4",
     "cypress": "^14.2.0",
     "dotenv-cli": "^9.0.0",
     "eslint": "^9",
